adding classes for ex8

--- a/Tema 2/Hilos/bin/.gitignore
+++ b/Tema 2/Hilos/bin/.gitignore
@@ -1,7 +1,2 @@
-/Consumidor.class
-/Contenedor.class
-/Loading.class
-/Main.class
-/Productor.class
-/Tarea.class
-/TareaLenta.class
+/MyTask.class
+/Counter.class
